--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/dizzyblog
+MONGODB_URI=mongodb+srv://mydbs:cU32b4GrLcApVPAl@cluster0.gku5k.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=24r23c2334c423nrc98n
 CLOUDINARY_CLOUD_NAME=du67s7p6d
 CLOUDINARY_API_KEY=141298791121569
